feat(skills): quality batch — 11 SKILL.md through improvement loop (v6.9.17)
Eleven parallel subagents each ran websearch → update → critique → update
with 7-language coverage (C#, Java, Python, C, C++, JS/TS, SQL).

| Skill                       | Highlights                                                                 |
|-----------------------------|----------------------------------------------------------------------------|
| code-reviewer               | judgement-call patterns; explicit defer table to siblings                  |
| complexity-analyzer         | cyclomatic + cognitive + NPath + Halstead; new-code "Clean as You Code"    |
| complexity-reducer          | Fowler catalog; codemod >5-site rule; explicit warnings-are-bugs carve-out |
| code-smell-detector         | Fowler + ML/LLM 2026 additions (data leakage, god prompt)                  |
| dead-code-detector          | unreachable vs unused distinction; 12-row FP table (reflection/dyn/...)    |
| duplicate-code-detector     | T1/T2/T3/T4 taxonomy; SourcererCC recall numbers (arXiv:1603.01661)        |
| consistency-checker         | EditorConfig + Prettier/Biome + conventional commits + commitlint          |
| type-checker                | strict-mode-as-default; PEP 695, sealed types, branded TS, C++20 concepts  |
| architecture-checker        | layered/hexagonal/clean/onion/slices/modular-monolith pattern picker       |
| performance-validator       | p50/p95/p99 budgets + microbenchmark anti-patterns; declarative CI gate    |
| quality-gate                | zero-warnings policy; baseline.expires_at mandatory                        |

All preserve YAML frontmatter, severity reconciliation (internal triage vs
always-`critical` wire), Tool Integration (2026) with C#/.NET commands, and
Letter schema. Refinement-loop critic-mode footer preserved verbatim.

No invented stats; all citations come from search-returned 2026 sources.
No real secrets or PII in any example.

Tests: 1521/1521.

Co-Authored